--- a/duts/CMakeLists.txt
+++ b/duts/CMakeLists.txt
@@ -15,7 +15,8 @@ target_include_directories( peripherals_sysc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_include_directories( peripherals_sysc PRIVATE ${SystemC_INCLUDE_DIR})
 
 #"PRIVATE" not working as I expect it to (dont link at the end with executable...)
-# but this is OK only as long as the executable target does link it anyway
-# (with llvm-link it is not allowed to have multiple symbols)
-#target_link_libraries( bench_translated PRIVATE minikernel )
-#target_link_libraries( bench_sysc PRIVATE ${SystemC_LIBRARIES} )
+# but this is OK only as long as the executable target does link it anyway.
+# With llvm-link it is not allowed to have multiple symbols, unless we specify --only-needed,
+# which produces different problems (main not linked)
+#target_link_libraries( peripherals_translated PRIVATE minikernel )
+#target_link_libraries( peripherals_sysc PRIVATE ${SystemC_LIBRARIES} )
