--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,11 @@ add_subdirectory(symsysc)
 add_subdirectory(duts)
 add_subdirectory(plic-rtl)
 
+add_executable(testbench_clock
+		benches/bench_clock.cpp
+)
+target_link_libraries(testbench_clock minikernel)
+
 add_executable(testbench_rtl
         benches/bench_plic_rtl.cpp
 )
