use verilated plic model.
Instead of verilating rtl plic in CMakelists.txt, the verilated model is directly used (since there will likely be no changes anyway).
This will hopefully make working in the Dockercontainer easier bc the Verilator version available in apt is too old for cmake support (+ model needs to be build to bytecode for klee)

--- a/plic-rtl/CMakeLists.txt
+++ b/plic-rtl/CMakeLists.txt
@@ -1,17 +1,14 @@
 message(STATUS "Loading sources from crosslevel-peripheral-fuzzing")
 
-find_package(verilator HINTS $ENV{VERILATOR_ROOT})
+file(GLOB VERILATOR_SRC "plic_dir/*.cpp")
 
 set(SOURCES
         plic_rtl.cpp
         simple_bus_rtl.cpp
+        ${VERILATOR_SRC}
 )
 
 add_library(plic_verilated ${SOURCES})
-verilate(plic_verilated SOURCES RVPLIC.v
-        TOP_MODULE RVPLIC
-        SYSTEMC
-        VERILATOR_ARGS -LDFLAGS -Wno-attributes -Wno-WIDTH -Wno-UNOPTFLAT -Wno-CMPCONST -Wno-UNSIGNED
-)
+
 target_include_directories(plic_verilated PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(plic_verilated PUBLIC minikernel)
